Fixed text spacing

--- a/www/css/fhq.automationussr.css
+++ b/www/css/fhq.automationussr.css
@@ -1,4 +1,8 @@
 
+body{
+	line-height: 20px;
+}
+
 h1 {
 	padding: 0px;
 	margin: 0px;
